--- a/SCSS/style.css
+++ b/SCSS/style.css
@@ -1,5 +1,32 @@
-body .main p {
-  text-align: center;
+html {
+  box-sizing: border-box;
+  font-size: 100%;
 }
 
-/*# sourceMappingURL=style..css.map */
+*, *::before, *::after {
+  box-sizing: inherit;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: hsl(0deg, 0%, 11%);
+  color: hsl(0deg, 0%, 100%);
+}
+
+h1, h2, h3 {
+  font-weight: 700;
+  line-height: 1.1;
+  margin-top: 0;
+}
+
+p {
+  margin-top: 0;
+}
+
+a, a:visited, a:active {
+  text-decoration: none;
+}
+
+/*# sourceMappingURL=style.css.map */
