--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,6 @@ a, a:visited, a:active {
   text-decoration: none;
 }
 
-/*# sourceMappingURL=style.css.map */
+/** @format */
 
 /*# sourceMappingURL=style.css.map */
