--- a/scss/globals/_boilerplate.scss
+++ b/scss/globals/_boilerplate.scss
@@ -1,4 +1,5 @@
 // Basic style
+@use '../util' as u;
 html {
   box-sizing: border-box;
   font-size: 100%;
@@ -11,7 +12,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  font-family: Arial, Helvetica, sans-serif;
-  background-color: hsl(0, 0%, 11%);
-  color: hsl(0, 0%, 100%);
+  font-family: u.$font;
+  background-color: var(--background-color);
+  color: var(--text-color);
 }
