--- a/scss/style.css
+++ b/scss/style.css
@@ -10,9 +10,9 @@ html {
 body {
   margin: 0;
   padding: 0;
-  font-family: Arial, Helvetica, sans-serif;
-  background-color: hsl(0deg, 0%, 11%);
-  color: hsl(0deg, 0%, 100%);
+  font-family: "Open Sans", sans-serif;
+  background-color: var(--background-color);
+  color: var(--text-color);
 }
 
 h1, h2, h3 {
@@ -28,5 +28,12 @@ p {
 a, a:visited, a:active {
   text-decoration: none;
 }
+
+:root {
+  --background-color: hsl(0, 0%, 11%);
+  --text-color: hsl(0, 0%, 100%);
+}
+
+/** @format */
 
 /*# sourceMappingURL=style.css.map */
