Add min() function to the grid container to align content center

--- a/scss/style.css
+++ b/scss/style.css
@@ -39,10 +39,13 @@ a, a:visited, a:active {
   grid-template-columns: 1fr;
   grid-template-rows: auto auto;
   gap: 40px;
+  width: min(100% - 40px, 1000px);
+  margin-inline: auto;
 }
 @media (min-width: 900px) {
   .grid {
     grid-template-columns: 2fr 1fr;
+    grid-template-rows: auto;
   }
 }
 .grid__main, .grid__sidebar {
