--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -3,21 +3,27 @@
   grid-template-columns: 1fr;
   grid-template-rows: auto auto;
   gap: 40px;
+  //max-width: 1000px;
+  width: min(100% - 40px, 1000px);
+  margin-inline: auto; // The same like margin-inline-start: auto; and margin-inline-end: auto
+
 
 //  Breakpoint from 900px and up
 @media (min-width: 900px) {
   grid-template-columns: 2fr 1fr;
+  grid-template-rows: auto;
 }
+
 
 
   &__main, &__sidebar {
     padding: 40px;
   }
 
-
   &__main {
   background-color: darkblue;
   }
+
   &__sidebar {
   background-color: magenta;
   }
