--- a/scss/style.css
+++ b/scss/style.css
@@ -42,7 +42,7 @@ a, a:visited, a:active {
   width: min(100% - 40px, 1000px);
   margin-inline: auto;
 }
-@media (min-width: 900px) {
+@media (min-width: 56.25em) {
   .grid {
     grid-template-columns: 2fr 1fr;
     grid-template-rows: auto;
